@@ -23,6 +23,8 @@ Not yet released.
 - #331, #415: documents the importance of URL encoding when using the ``like``
   operator to filter results.
 - #376: add a ``not_like`` operator for filter objects.
+- #431: adds a ``url_prefix`` keyword argument to the :class:`APIManager`
+  constructor, so one can specify a URL prefix once for all created APIs.
 - #449: roll back the session on any SQLAlchemy error, not just a few.
 - #436, #453: use ``__table__.name`` instead of ``__tablename__`` to infer the
   collection name for the SQLAlchemy model.
